// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gutter lg 1`] = `
<Stack
  className=""
  component="div"
  gutter="lg"
>
  <div
    className="pf-l-stack pf-m-gutter"
  >
    <StackItem
      className=""
      isFilled={false}
    >
      <div
        className="pf-l-stack__item"
      >
        Basic content
      </div>
    </StackItem>
  </div>
</Stack>
`;

exports[`Gutter md 1`] = `
<Stack
  className=""
  component="div"
  gutter="md"
>
  <div
    className="pf-l-stack pf-m-gutter"
  >
    <StackItem
      className=""
      isFilled={false}
    >
      <div
        className="pf-l-stack__item"
      >
        Basic content
      </div>
    </StackItem>
  </div>
</Stack>
`;

exports[`Gutter sm 1`] = `
<Stack
  className=""
  component="div"
  gutter="sm"
>
  <div
    className="pf-l-stack pf-m-gutter"
  >
    <StackItem
      className=""
      isFilled={false}
    >
      <div
        className="pf-l-stack__item"
      >
        Basic content
      </div>
    </StackItem>
  </div>
</Stack>
`;

exports[`isMain defaults to false 1`] = `
<Stack
  className=""
  component="div"
  gutter={null}
>
  <div
    className="pf-l-stack"
  >
    <StackItem
      className=""
      isFilled={false}
    >
      <div
        className="pf-l-stack__item"
      >
        Basic content
      </div>
    </StackItem>
  </div>
</Stack>
`;

exports[`isMain set to true 1`] = `
<Stack
  className=""
  component="div"
  gutter={null}
>
  <div
    className="pf-l-stack"
  >
    <StackItem
      className=""
      isFilled={true}
    >
      <div
        className="pf-l-stack__item pf-m-fill"
      >
        Filled content
      </div>
    </StackItem>
  </div>
</Stack>
`;
